# eigen2mat

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  signature_of_eigen2mat_library
cmake/: FindMATLAB.cmake
documentation/: build.docu  license.docu  mainpage.docu  requirements.docu
eigen2mat/: comma_initializer.hpp  conversion.hpp  definitions.hpp  print.hpp  sparse_slice.hpp  sparse_slice_op.hpp  tensor_block.hpp  tensor_to_matrix.hpp
eigen2mat/details/: complex_traits.hpp  eigen_expressions_conversions.hpp
eigen2mat/plugins/: sparse_matrix_plugin.hpp
eigen2mat/utils/: Eigen_Core  Eigen_LU  Eigen_Sparse  eigen_mat_array_conversion.hpp  eigen_plugins.hpp  forward_declarations.hpp  macros.hpp
src/: conversion.cpp  print.cpp  tensor_to_matrix.cpp
src/cpp/: conversion.cpp  print.cpp  tensor_to_matrix.cpp
src/inc/: comma_initializer.hpp  conversion.hpp  definitions.hpp  print.hpp  sparse_slice.hpp  tensor_block.hpp  tensor_to_matrix.hpp
src/plugins/: sparse_matrix_plugin.hpp
src/utils/: Eigen_Core  Eigen_LU  Eigen_Sparse  include_mex  macros.hpp
test/: mytest.m  test.cpp  test_sparse_slice_mex.cpp
